--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: stepci/stepci@main
+        env:
+          STEPCI_DISABLE_ANALYTICS: "1"
         with:
           workflow: workflow.yml
