yarn add -D vitest

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "repository": "git@github.com:koki-develop/stepci-example.git",
   "author": "koki-develop <kou.pg.0131@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "vitest": "^0.25.3"
+  }
 }
