--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": false,
   "devDependencies": {
     "@stepci/runner": "^1.7.0",
+    "prettier": "^2.8.0",
     "vitest": "^0.25.3"
   }
 }
