--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,21 @@ on:
   push:
 
 jobs:
-  test:
+  with-action:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: stepci/stepci@main
-        env:
-          STEPCI_DISABLE_ANALYTICS: "1"
         with:
           workflow: workflow.yml
+
+  with-vitest:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: package.json
+          cache: yarn
+      - name: vitest
+        run: yarn test
