--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,7 @@ jobs:
         with:
           node-version-file: package.json
           cache: yarn
+      - name: install dependencies
+        run: yarn install --frozen-lockfile
       - name: vitest
         run: yarn test
